# caelestia-wayfire-desktop

./: .gitignore  CARD-RAISE_TO_plugins-extra.md  README.md  install.sh
config/: mimeapps.list  wayfire.ini
config/caelestia/: shell.json
config/environment.d/: 50-local-bin.conf  60-cursor.conf
config/gtk-3.0/: settings.ini
config/gtk-4.0/: gtk.css
config/systemd-user/xdg-desktop-portal.service.d/: override.conf
config/xdg-desktop-portal/: wayfire-portals.conf
miniapps/Gráficos/: .DirIcon
miniapps/Gráficos/Conversor de imágenes/: .DirIcon  AppInfo.xml  AppRun
miniapps/Gráficos/Girar a la derecha/: .DirIcon  AppInfo.xml  AppRun  DirIcon
miniapps/Gráficos/Girar a la izquierda/: .DirIcon  AppInfo.xml  AppRun  DirIcon
miniapps/Gráficos/Minilibro de 8 páginas/: .DirIcon  AppInfo.xml  AppRun
miniapps/Gráficos/Redimensiona/: .DirIcon  AppInfo.xml  AppRun
miniapps/Multimedia/: .DirIcon  .translations
miniapps/Multimedia/Audio a MP3/: .DirIcon  AppInfo.xml  AppRun  Help
miniapps/Multimedia/Cortador de audio/: .DirIcon  AppInfo.xml  AppRun
miniapps/Multimedia/Enlentece audio/: .DirIcon  AppInfo.xml  AppRun
miniapps/Multimedia/Iguala el volumen de MP3/: .DirIcon  AppInfo.xml  AppRun
miniapps/Multimedia/Información de archivos/: .DirIcon  AppInfo.xml  AppRun
miniapps/Multimedia/Pega archivos de audio/: .DirIcon  AppInfo.xml  AppRun
miniapps/Multimedia/Vídeo a MP3/: .DirIcon  AppInfo.xml  AppRun
miniapps/Office/: .DirIcon  .translations
miniapps/Office/Comprime PDF/: .DirIcon  AppInfo.xml  AppRun  leanify  minipdf
miniapps/Office/De PDF a PNG/: .DirIcon  AppInfo.xml  AppRun
miniapps/Office/Imprime!/: .DirIcon  AppInfo.xml  AppRun
miniapps/Office/MatPuzzle/: .DirIcon  AppInfo.xml  AppRun  matpuzzle.py
miniapps/Office/Panfleto/: .DirIcon  AppInfo.xml  AppRun  panfleto.py
miniapps/Office/Recortar PDF/: .DirIcon  AppInfo.xml  AppRun  recorta.py  recorta_manual.py
miniapps/Office/Reorganiza PDF/: .DirIcon  AppInfo.xml  AppRun
miniapps/Office/Une documentos/: .DirIcon  AppInfo.xml  AppRun
miniapps/Sistema/: .DirIcon  .translations
miniapps/Sistema/Autoapagado/: .DirIcon  AppInfo.xml  AppRun
miniapps/Sistema/DriveSpeed/: .DirIcon  AppInfo.xml  AppRun
miniapps/Sistema/Limpia/: .DirIcon  AppInfo.xml  AppRun
miniapps/Sistema/Recupera archivos borrados/: .DirIcon  AppInfo.xml  AppRun
miniapps/Sistema/Renombra archivos a UTF-8/: .DirIcon  AppInfo.xml  AppRun
miniapps/Sistema/Repes/: .DirIcon  AppInfo.xml  AppRun
miniapps/Sistema/Suma MD5/: .DirIcon  AppInfo.xml  AppRun
patches/: oneko-rust-wayfire.patch  wayfire-plugins-extra-annotate-grid.patch  wayfire-scale-hover-dnd.patch  wayfire-xwayland-root-cursor.patch
prebuilt/: oneko-rust
shell/: .gitignore  README.md  shell.qml
shell/assets/shaders/: circle_wipe.frag  circle_wipe.frag.qsb
shell/components/: AnchorAnim.qml  Anim.qml  DrawerVisibilities.qml
shell/components/misc/: CustomShortcut.qml
shell/i18n/: caelestia_es.ts
shell/modules/: BatteryMonitor.qml  InputOsd.qml  RecordCountdown.qml  ScreenshotIpc.qml  Shortcuts.qml  WindowControlsTop.qml
shell/plugin/src/Caelestia/: CMakeLists.txt  i18n.cpp
shell/plugin/src/Caelestia/Config/: serviceconfig.hpp  utilitiesconfig.hpp
shell/scripts/: miniapps-scan.py
shell/services/: Audio.qml  CpuFreq.qml  Hypr.qml  Hypr.qml.hyprland  MiniApps.qml  Notifs.qml  Screenshot.qml  Sounds.qml  SystemUsage.qml  Weather.qml
shell/utils/: Paths.qml
state/caelestia/: scheme.json
system/xdg-desktop-portal/: wayfire-portals.conf
wayfire-ninjaslash/: NOTES.md  README.md  meson.build
wayfire-ninjaslash/metadata/: ninjaslash.xml
wayfire-ninjaslash/src/: ninjaslash.cpp
wayfire-shift-switcher/: README.md  meson.build
wayfire-shift-switcher/metadata/: shift-switcher.xml
wayfire-shift-switcher/src/: shift-switcher.cpp
wayfire-showpointer/: NOTES.md  README.md  meson.build
wayfire-showpointer/metadata/: showpointer.xml
wayfire-showpointer/src/: showpointer.cpp
(+95 files in other folders)
